bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: sighas-api
    labels:
        com.docker.compose.project: sighas-api
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: sighas-api
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: sighas-api
                com.docker.compose.service: app
                com.docker.compose.network.sighas-network: "true"
        spec:
            containers:
                - name: sighas-api
                  image: sighas-api-app
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: app-8080
                      containerPort: 8080
