bridge/base/rdbms-deployment.yaml
#! rdbms-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rdbms
    namespace: sighas-api
    labels:
        com.docker.compose.project: sighas-api
        com.docker.compose.service: rdbms
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: sighas-api
            com.docker.compose.service: rdbms
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: sighas-api
                com.docker.compose.service: rdbms
                com.docker.compose.network.sighas-network: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: sighas-database
                  image: postgres:17.6
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: rdbms-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: rdbms-sighas-database-volume
