bridge/base/rdbms-expose.yaml
#! rdbms-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: rdbms
    namespace: sighas-api
    labels:
        com.docker.compose.project: sighas-api
        com.docker.compose.service: rdbms
spec:
    selector:
        com.docker.compose.project: sighas-api
        com.docker.compose.service: rdbms
    ports:
        - name: rdbms-5432
          port: 5432
          targetPort: rdbms-5432
