bridge/base/rdbms-service.yaml
#! rdbms-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: rdbms-published
    namespace: sighas-api
    labels:
        com.docker.compose.project: sighas-api
        com.docker.compose.service: rdbms
spec:
    selector:
        com.docker.compose.project: sighas-api
        com.docker.compose.service: rdbms
    ports:
        - name: rdbms-5432
          port: 5432
          protocol: TCP
          targetPort: rdbms-5432
