bridge/base/sighas-network-network-policy.yaml
#! sighas-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: sighas-network-network-policy
    namespace: sighas-api
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.sighas-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.sighas-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.sighas-network: "true"
